--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,14 @@
         </dependencies>
     </dependencyManagement>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+    </repositories>
+
+
     <developers>
         <developer>
             <name>Nerd Vision</name>
