--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,4 +23,4 @@ tag_build:
     - tags
   script:
     - mvn -s .ci_settings.xml versions:set -DnewVersion=${CI_COMMIT_TAG}
-    - mvn -s .ci-settings.xml clean deploy -p release-ossrh
+    - mvn -s .ci_settings.xml clean deploy -p release-ossrh
