--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ cache:
     - maven.repository/
 
 variables:
-  MAVEN_OPTS: '-Dmaven.repo.local=$CI_PROJECT_DIR/maven.repository/'
+  MAVEN_OPTS: '-Dmaven.repo.local=maven.repository/'
 
 stages:
   - build
