--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,4 +23,4 @@ tag_build:
     - tags
   script:
     - mvn -B -U -s .ci_settings.xml versions:set -DnewVersion=${CI_COMMIT_TAG}
-    - mvn -B -U -s .ci_settings.xml clean deploy -pl release-ossrh
+    - mvn -B -U -s .ci_settings.xml clean deploy -P release-ossrh
