--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ branch_build:
     - tags
   script:
     - mvn -B -U -s .ci_settings.xml clean verify
+    - cat target/site/jacoco/index.html | grep -o 'Total[^%]*%' | sed -e 's/Total/Jacoco-Test-Coverage:/g' | sed -e 's/<.*ctr2">//g'
+  coverage: '/Jacoco-Test-Coverage:[0-9]+%/'
 
 tag_build:
   stage: build
